<feat> change MRS.GAnalytics to MRS.App.GAnalytics

--- a/config/app.conf.json
+++ b/config/app.conf.json
@@ -1,5 +1,5 @@
 {
-	"module": "MRS.GoogleAnalytics",
+	"module": "MRS.App.GoogleAnalytics",
 	"trackRoutes": true,
 	"accountId": "",
 	"trackPrefix": "",
