--- a/package.json
+++ b/package.json
@@ -1,18 +1,18 @@
 {
-  "name": "MRS.GoogleAnalytics",
-  "version": "0.4.2",
+  "name": "mrs-app-ga",
+  "version": "0.5.0",
   "description": "Google Analytics module for AngularJS and PhoneGap",
-  "main": "src/index.html",
-  "homepage": "http://www.tlantic.com/",
-  "author": "Pedro Simeão Carvalho",
-  "license": "GPL",
+  "homepage": "http://github.com/Tlantic/mrs-app-ga",
+  "repository": "http://github.com/Tlantic/mrs-app-ga.git",
+  "author": "Tlantic MRS Team",
+  "license": "BSD",
   "devDependencies": {
     "grunt": "^0.4.5",
     "grunt-contrib-clean": "^0.5.0",
     "grunt-contrib-concat": "^0.3.0",
     "grunt-contrib-copy": "^0.5.0",
     "grunt-contrib-jshint": "^0.9.2",
-    "grunt-contrib-uglify": "^0.4.0",
+    "grunt-contrib-uglify": "^0.9.1",
     "grunt-contrib-yuidoc": "^0.5.2",
     "grunt-karma": "^0.8.3",
     "karma": "^0.12.16",
